welcome.lessons.welcome.methods.flowerpot.FlowerCase.scala.error
FlowerCase:57: error: identifier expected but ')' found.
def avancer(a:) {
              ^FlowerCase:85: error: ')' expected but '}' found.
}
^